Fixing the overflow issues and video resizing issues

--- a/app/assets/sass/components/connectionsWall/viewEditPost/_mobile.scss
+++ b/app/assets/sass/components/connectionsWall/viewEditPost/_mobile.scss
@@ -62,6 +62,11 @@
       font-weight: bold;
     }
   }
+  .video {
+    width: 100%;
+    height: 100%;
+    padding: 0;
+  }
   .edit-post-form {
     width: 100%;
     padding: 20px 10px;
